; ModuleID = '/home/carl/AnghaBench/h2o/deps/mruby/src/extr_range.c_range_inspect.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/mruby/src/extr_range.c_range_inspect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.RRange = type { i32 }

@.str = private unnamed_addr constant [4 x i8] c"...\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @range_inspect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @range_inspect(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.RRange*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load i32*, i32** %3, align 8
  %9 = load i32, i32* %4, align 4
  %10 = call %struct.RRange* @mrb_range_ptr(i32* %8, i32 %9)
  store %struct.RRange* %10, %struct.RRange** %7, align 8
  %11 = load i32*, i32** %3, align 8
  %12 = load %struct.RRange*, %struct.RRange** %7, align 8
  %13 = call i32 @RANGE_BEG(%struct.RRange* %12)
  %14 = call i32 @mrb_inspect(i32* %11, i32 %13)
  store i32 %14, i32* %5, align 4
  %15 = load i32*, i32** %3, align 8
  %16 = load %struct.RRange*, %struct.RRange** %7, align 8
  %17 = call i32 @RANGE_END(%struct.RRange* %16)
  %18 = call i32 @mrb_inspect(i32* %15, i32 %17)
  store i32 %18, i32* %6, align 4
  %19 = load i32*, i32** %3, align 8
  %20 = load i32, i32* %5, align 4
  %21 = call i32 @mrb_str_dup(i32* %19, i32 %20)
  store i32 %21, i32* %5, align 4
  %22 = load i32*, i32** %3, align 8
  %23 = load i32, i32* %5, align 4
  %24 = load %struct.RRange*, %struct.RRange** %7, align 8
  %25 = call i64 @RANGE_EXCL(%struct.RRange* %24)
  %26 = icmp ne i64 %25, 0
  %27 = zext i1 %26 to i64
  %28 = select i1 %26, i32 3, i32 2
  %29 = call i32 @mrb_str_cat(i32* %22, i32 %23, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 %28)
  %30 = load i32*, i32** %3, align 8
  %31 = load i32, i32* %5, align 4
  %32 = load i32, i32* %6, align 4
  %33 = call i32 @mrb_str_cat_str(i32* %30, i32 %31, i32 %32)
  %34 = load i32, i32* %5, align 4
  ret i32 %34
}

declare dso_local %struct.RRange* @mrb_range_ptr(i32*, i32) #1

declare dso_local i32 @mrb_inspect(i32*, i32) #1

declare dso_local i32 @RANGE_BEG(%struct.RRange*) #1

declare dso_local i32 @RANGE_END(%struct.RRange*) #1

declare dso_local i32 @mrb_str_dup(i32*, i32) #1

declare dso_local i32 @mrb_str_cat(i32*, i32, i8*, i32) #1

declare dso_local i64 @RANGE_EXCL(%struct.RRange*) #1

declare dso_local i32 @mrb_str_cat_str(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
